<?xml version="1.0"?>
<package>
  <name>vectornav</name>
  <version>0.0.0</version>
  <description>VN-100</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="dexter.a.watkins@vanderbilt.edu">Dexter Watkins</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
